[package]
name = "rust-freely"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["alloc", "serde"] }
derive_builder = { version = "0.20.1", features = ["alloc", "clippy"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
tokio = "1.40.0"
tokio-test = "0.4.4"
