[package]
name = "rust-freely"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "An asynchronous wrapper for the WriteFreely/Write.as API"
homepage = "https://github.com/dax-dot-gay/rust-freely"
repository = "https://github.com/dax-dot-gay/rust-freely"
readme = "README.md"
keywords = ["network", "api", "writefreely", "writeas", "async"]
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]

[dependencies]
chrono = { version = "0.4.38", features = ["alloc", "serde"] }
derive_builder = { version = "0.20.1", features = ["alloc", "clippy"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
serde_repr = "0.1.19"
tokio = "1.40.0"
tokio-test = "0.4.4"
